[tool.poetry]
name = "tinxy-local"
version = "0.1.0"
description = ""
authors = ["Siddhu <693151+arevindh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
zeroconf = "^0.136.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
